chore: refacto CRUD to get classes/structures